--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Temperature Converter</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Temperature Converter</h1>
-    <form id="conversionForm">
-        <input type="number" id="temperatureInput" placeholder="Enter temperature">
+    <div class="container">
+
+        <form id="conversionForm">
+            <input type="number" id="temperatureInput" placeholder="Enter temperature">
         <select id="fromUnit">
             <option value="celsius">Celsius</option>
             <option value="fahrenheit">Fahrenheit</option>
@@ -23,6 +25,7 @@
         <button type="submit">Convert</button>
     </form>
     <p id="result"></p>
+</div>
 
     <script>
         document.getElementById('conversionForm').addEventListener('submit', function(event) {
